--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,8 @@ a {
 	background-position: center;
 	background-repeat: no-repeat;
 	padding: 16px;
+	display: flex;
+	flex-direction: column;
 }
 
 header {
@@ -67,4 +69,46 @@ nav a {
 .active,
 nav a:hover {
 	color: var(--tertiary-color);
+}
+
+.hero {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	flex: 1;
+	gap: 20px;
+}
+
+.hero h3 {
+	color: var(--tertiary-color);
+	font-size: 28px;
+	font-weight: 500;
+}
+
+.hero h2 {
+	color: var(--primary-white);
+	font-size: 77px;
+	font-weight: 700;
+}
+
+.general-link {
+	border-width: 2px;
+	border-style: solid;
+	padding: 16px;
+}
+
+.style-white {
+	color: var(--primary-white);
+	border-color: var(--primary-white);
+}
+
+.style-white:hover {
+	color: #111;
+	background-color: var(--primary-white);
+}
+
+.call-to-action {
+	padding: 16px 48px;
+	font-size: 20px;
 }
