Complete the website

--- a/css/style.css
+++ b/css/style.css
@@ -269,12 +269,10 @@ nav a:hover {
 		padding: 16px;
 	}
 
-	td {
-		p:first-child {
-			font-family: var(--header-font);
-			font-weight: 500;
-			color: #343a40;
-			font-size: 20px;
-		}
+	td p:first-child {
+		font-family: var(--header-font);
+		font-weight: 500;
+		color: #343a40;
+		font-size: 20px;
 	}
 }
